--- a/package.json
+++ b/package.json
@@ -7,23 +7,54 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .js,.mjs,.cjs,.ts,.vue",
-    "lint:fix": "eslint . --ext .js,.mjs,.cjs,.ts,.vue --fix",
-    "prepare": "husky install"
+    "lint:lint-staged": "lint-staged",
+    "prepare": "husky install",
+    "commit": "git-cz"
   },
   "dependencies": {
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
     "@eslint/css": "^0.6.0",
     "@eslint/js": "^9.24.0",
     "@eslint/json": "^0.11.0",
     "@vitejs/plugin-vue": "^5.2.2",
+    "commitizen": "^4.3.1",
+    "cz-git": "^1.11.1",
     "eslint": "^9.24.0",
     "eslint-plugin-vue": "^10.0.0",
     "globals": "^16.0.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.5.1",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.0",
-    "husky": "^8.0.0"
+    "vite": "^6.3.0"
+  },
+  "lint-staged": {
+    "*.{js,ts}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{cjs,json}": [
+      "prettier --write"
+    ],
+    "*.{vue,html}": [
+      "eslint --fix",
+      "prettier --write",
+      "stylelint --fix"
+    ],
+    "*.{scss,css}": [
+      "stylelint --fix",
+      "prettier --write"
+    ],
+    "*.md": [
+      "prettier --write"
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-git"
+    }
   }
 }
