--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "commit": "git-cz"
   },
   "dependencies": {
+    "axios": "^1.8.4",
+    "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "vue": "^3.5.13"
   },
   "devDependencies": {
