--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
+    "jsencrypt": "^3.3.2",
     "lodash": "^4.17.21",
     "vue": "^3.5.13"
   },
