--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "commit": "git-cz"
   },
   "dependencies": {
+    "@datastructures-js/priority-queue": "^6.3.2",
     "axios": "^1.8.4",
     "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
