--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "js-cookie": "^3.0.5",
     "jsencrypt": "^3.3.2",
     "lodash": "^4.17.21",
+    "spark-md5": "^3.0.2",
     "vue": "^3.5.13"
   },
   "devDependencies": {
