--- a/package.json
+++ b/package.json
@@ -13,13 +13,33 @@
   },
   "dependencies": {
     "@datastructures-js/priority-queue": "^6.3.2",
+    "@vueup/vue-quill": "1.2.0",
+    "@vueuse/core": "10.11.0",
     "axios": "^1.8.4",
+    "clipboard": "2.0.11",
+    "echarts": "^5.5.1",
+    "echarts-gl": "^2.0.9",
+    "echarts-liquidfill": "^3.1.0",
+    "element-plus": "^2.9.8",
     "file-saver": "^2.0.5",
+    "fuse.js": "6.6.2",
+    "js-beautify": "1.14.11",
     "js-cookie": "^3.0.5",
     "jsencrypt": "^3.3.2",
     "lodash": "^4.17.21",
+    "nprogress": "0.2.0",
+    "pinia": "2.1.7",
     "spark-md5": "^3.0.2",
-    "vue": "^3.5.13"
+    "splitpanes": "3.1.5",
+    "unplugin-auto-import": "^19.1.2",
+    "vue": "^3.5.13",
+    "vue-cropper": "1.1.1",
+    "vue-router": "4.4.0",
+    "vue3-scale-box": "^0.1.9",
+    "vuedraggable": "4.1.0",
+    "vuex": "4.0.2",
+    "vxe-pc-ui": "4.4.11",
+    "vxe-table": "4.11.21"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
@@ -35,6 +55,7 @@
     "globals": "^16.0.0",
     "husky": "^8.0.0",
     "lint-staged": "^15.5.1",
+    "sass": "1.77.5",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.0"
   },
